# database-lab-bank-mangement-system

./: .env  Cargo.toml  README.md  Rocket.toml
doc/: report.tm
migrations/: data.sql  down.sql  up.sql
migrations/2022-04-27-112223_create_tables/: crebas.sql  down.sql  up.sql
src/: account_profile.rs  client_profile.rs  delete_payment.rs  edit_account.rs  edit_client.rs  loan_profile.rs  main.rs  models.rs  new_account.rs  new_client.rs  new_loan.rs  new_payment.rs  schema.rs  search.rs  subbranch_manage.rs  utility.rs
src/account_manage/: delete.rs  insert.rs  mod.rs  query.rs  update.rs
src/preludes/: diesel_prelude.rs  mod.rs  rocket_prelude.rs
static/: form-style.css  style.css
templates/: account-profile.html.hbs  client-profile.html.hbs  delete-account-success.html.hbs  delete-client-success.html.hbs  delete-payment-success.html.hbs  edit-checking-account.html.hbs  edit-client.html.hbs  edit-saving-account.html.hbs  error.html.hbs  index.html.hbs  loan-profile.html.hbs  new-account-success.html.hbs  new-account.html.hbs  new-client-success.html.hbs  new-client.html.hbs  new-loan-success.html.hbs  new-loan.html.hbs  new-payment-success.html.hbs  new-payment.html.hbs  results.html.hbs  subbranch-profile.html.hbs  update-account-success.html.hbs  update-client-success.html.hbs
tests/: data.sql
