[package]
name = "bank_management_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
serde = "1.0.126"
diesel = { version = "1.4.8", features = ["mysql", "numeric", "bigdecimal"] }
dotenv = "0.15.0"
bigdecimal = "0.3.0"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
regex = "1.5.5"
chrono = "0.4.0"

[features]
bigdecimal=[]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_mysql_pool"]